--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,18 @@ dependencies:
   flutter_modular: ^6.3.2
   logger: ^2.0.2+1
   string_validator: ^1.0.2
+  fluttertoast: ^8.2.4
+  mobx_codegen: ^2.4.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
+
+flutter_intl:
+  enabled: true
