--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   amplify_auth_cognito: ^1.6.0
   amplify_flutter: ^1.6.0
@@ -21,6 +23,7 @@ dependencies:
   fluttertoast: ^8.2.4
   mobx_codegen: ^2.4.0
   intl: ^0.18.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +33,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+
 
 flutter_intl:
   enabled: true
