--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,20 +21,20 @@ dependencies:
   logger: ^2.0.2+1
   string_validator: ^1.0.2
   fluttertoast: ^8.2.4
-  mobx_codegen: ^2.4.0
   intl: ^0.18.1
   google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.4.0
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/intelicity_logo.png
 
 
 flutter_intl:
