--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   fluttertoast: ^8.2.4
   intl: ^0.18.1
   google_fonts: ^6.1.0
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
